--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -22,21 +22,19 @@
             android:id="@+id/addHeadingView"
             android:layout_width="match_parent"
             android:layout_height="58dp"
-            android:fontFamily="@font/font"
+            android:fontFamily="@font/bold"
             android:hint="Введите название..."
             android:textColor="#FFFFFF"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/addDescriptionView"
             android:layout_width="375dp"
             android:layout_height="486dp"
-            android:fontFamily="@font/font"
+            android:fontFamily="@font/applefont"
             android:hint="Введите текст..."
             android:textColor="#FFFFFF"
-            android:textSize="28sp"
-            android:textStyle="italic" />
+            android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -48,17 +46,33 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        >
 
-        <Button
-            android:id="@+id/buttonAdd"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:fontFamily="@font/font"
-            android:text="Создать заметку"
-            android:textSize="23sp"
-            android:textStyle="bold" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:src="@android:drawable/ic_menu_close_clear_cancel"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.351"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.411" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:backgroundTint="#2EED66"
+            app:srcCompat="@android:drawable/ic_menu_add" />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
